@@ -1,16 +1,21 @@
 package ru.shop.sevices;
 
+import org.springframework.stereotype.Service;
 import ru.shop.domain.Customer;
 import ru.shop.domain.Domain;
 import ru.shop.domain.Order;
 import ru.shop.domain.Product;
 import ru.shop.exception.BadOrderCountException;
+import ru.shop.exception.EntityNotFoundException;
 import ru.shop.repository.CommonRepository;
 
+import java.security.spec.ECField;
 import java.util.List;
+import java.util.Optional;
 import java.util.UUID;
 import java.util.stream.Collectors;
 
+@Service
 public class OrderService implements CommonService{
     private final CommonRepository orderRepository;
 
@@ -27,7 +32,6 @@ public class OrderService implements CommonService{
     public List<Domain> findAll() {
         return orderRepository.findAll();
     }
-
     public void add(Customer customer, Product product, Long count) throws BadOrderCountException {
         if (count < 0) {
             throw new BadOrderCountException("count is less than zero");
@@ -36,10 +40,14 @@ public class OrderService implements CommonService{
         this.save(order);
     }
     public List<Order> findByCustomer (Customer customer) {
-        List<Order> orders = this.findAll().stream().map(d -> (Order)d).collect(Collectors.toList());
+        List<Order> orders = this.findAll().stream().map(d -> (Order) d).toList();
         return orders.stream().filter(o -> o.getCustomerId() == customer.getId()).collect(Collectors.toList());
     }
     public Long getTotalCustomerAmount(Customer customer) {
         return this.findByCustomer(customer).stream().map(o -> o.getAmount()).mapToLong(v -> v).sum();
+    }
+    public Optional<Order> findById(UUID id) throws EntityNotFoundException {
+        List<Order> orders = this.findAll().stream().map(d -> (Order) d).toList();
+        return Optional.of(orders.stream().filter(o -> o.getId().equals(id)).findFirst().orElseThrow(() -> new EntityNotFoundException("order not found")));
     }
 }
